tests/paczka1/fuzzy1/83186560.err
Error in line 10: wIn A443 87,9
Error in line 25: 1XkcwP A407 20,4
Error in line 23: HElXBN A443 43,3
Error in line 20: LwnXRm0lf A231 80,7
